fix: overflowing page

--- a/user/themes/centra/scss/_navigation-item.scss
+++ b/user/themes/centra/scss/_navigation-item.scss
@@ -12,7 +12,7 @@
 
 .navigation__item {
   position: relative;
-  margin: 0 25px;
+  margin: 0 10px;
 }
 
 .navigation-item__link {
